--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,15 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">  
+  <style>
+    .mat-select-arrow, .mat-select-value {
+      color: white !important;
+    }
+    .mat-form-field-underline.ng-tns-c8-0.ng-star-inserted{
+      background-color: white !important;
+    }
+  </style>
 </head>
 <body>
   <app-root></app-root>
